--- a/src/app/components/ProductDetails/productDetails.module.css
+++ b/src/app/components/ProductDetails/productDetails.module.css
@@ -84,7 +84,8 @@
 
 .option_item {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  /* align-items: center; */
   gap: 10px;
 }
 
@@ -154,6 +155,7 @@
 
   .image_thumbnails {
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     overflow-x: auto;
     width: 100%;
@@ -164,5 +166,11 @@
     width: 70px;
     height: 70px;
     flex-shrink: 0;
+  }
+}
+@media (max-width: 720px) {
+    .main_image {
+    height: 300px;
+    width: 300px;
   }
 }
